# EventCalib

./: CMakeLists.txt  COPYRIGHT  README.md
cmake/: CmakeConfig.h.in
modules/camera_calibration/: readme.txt
modules/camera_calibration/cv_calib/: CMakeLists.txt
modules/camera_calibration/cv_calib/app/: camera_calibration.cpp
modules/camera_calibration/cv_calib/include/: circlesgrid.hpp  cv_calib.hpp  precomp.hpp
modules/camera_calibration/cv_calib/src/: circlesgrid.cpp  cv_calib.cpp
modules/camera_calibration/dbscan/: CMakeLists.txt
modules/camera_calibration/dbscan/include/: dbscan.h  kdtree.h
modules/camera_calibration/dbscan/src/: kdtree.cpp
modules/camera_calibration/event/: CMakeLists.txt  TODO
modules/camera_calibration/event/include/opengv2/event/: Event.hpp  EventContainer.hpp  EventFrame.hpp  EventStream.hpp
modules/camera_calibration/event/src/: EventFrame.cpp  EventStream.cpp
modules/camera_calibration/event/test/: unit_test.cpp
modules/camera_calibration/event/tool/: txt2bin.cpp
modules/camera_calibration/event_camera_calib/: CMakeLists.txt
modules/camera_calibration/event_camera_calib/include/opengv2/event_camera_calib/: CalibCircle.hpp  CirclesEventFrame.hpp  EventCalibIni.hpp  EventCalibSpline.hpp  parameters.hpp
modules/camera_calibration/event_camera_calib/src/: CirclesEventFrame.cpp  EventCalibIni.cpp  EventCalibSpline.cpp
modules/camera_calibration/event_camera_calib/test/: HandEyeCalibration.cpp  eventCameraCalib.cpp  unit_test_inverseDistortion.cpp  visulization_eventCalib.cpp
modules/core/: CMakeLists.txt
modules/core/bundle_adjustment/: CMakeLists.txt
modules/core/bundle_adjustment/include/opengv2/bundle_adjustment/: BundleAdjustmentBase.hpp  NormalBundleAdjustment.hpp  RelativeConstraintBA.hpp  SplineBundleAdjustment.hpp  SplineBundleAdjustmentV1.hpp  SplineBundleAdjustmentV2.hpp
modules/core/bundle_adjustment/src/: NormalBundleAdjustment.cpp  RelativeConstraintBA.cpp  SplineBundleAdjustment.cpp  SplineBundleAdjustmentV1.cpp  SplineBundleAdjustmentV2.cpp
modules/core/feature/: CMakeLists.txt
modules/core/feature/include/opengv2/feature/: FeatureBase.hpp  FeatureIdentifier.hpp  KeyPoint.hpp
modules/core/feature_extractor/: CMakeLists.txt
modules/core/feature_extractor/include/: ORBextractor.h
modules/core/feature_extractor/include/opengv2/feature_extractor/: FeatureExtractorBase.hpp  cvPointExtractor.hpp  orbPointExtractor.hpp
modules/core/feature_extractor/src/: ORBextractor.cc  cvPointExtractor.cpp  orbPointExtractor.cpp
modules/core/frame/: CMakeLists.txt
modules/core/frame/include/opengv2/frame/: Bodyframe.hpp  CameraFrame.hpp  FrameBase.hpp  MonoCameraFrame.hpp  StereoCameraFrame.hpp
modules/core/landmark/: CMakeLists.txt
modules/core/landmark/include/opengv2/landmark/: LandmarkBase.hpp
modules/core/map/: CMakeLists.txt
modules/core/map/include/opengv2/map/: MapBase.hpp
modules/core/map/src/: MapBase.cpp
modules/core/map_optimizer/: CMakeLists.txt
modules/core/map_optimizer/include/opengv2/map_optimizer/: GVMapOptimizer.hpp  MapOptimizerBase.hpp
modules/core/map_optimizer/src/: GVMapOptimizer.cpp  MapOptimizerBase.cpp
modules/core/match/: CMakeLists.txt
modules/core/match/include/opengv2/match/: MatchBase.hpp  MatcherBase.hpp
modules/core/match/src/: MatcherBase.cpp
modules/core/observation/include/opengv2/observation/: ObservationBase.hpp
modules/core/sensor/: CMakeLists.txt
modules/core/sensor/include/opengv2/sensor/: CameraBase.hpp  OmniMeiCamera.hpp  OmniScaramuzzaCamera.hpp  PinholeCamera.hpp  SensorBase.hpp
modules/core/sensor/src/: OmniMeiCamera.cpp  OmniScaramuzzaCamera.cpp  PinholeCamera.cpp
modules/core/simulator/: CMakeLists.txt
modules/core/simulator/include/opengv2/simulator/: Simulator.hpp
modules/core/simulator/src/: Simulator.cpp
modules/core/spline/: CMakeLists.txt
modules/core/spline/include/opengv2/spline/: BsplineReal.hpp  BsplineSO3.hpp
modules/core/spline/src/: BsplineSO3.cpp
modules/core/spline/test/: BsplineSO3_test.cpp
modules/core/system/: CMakeLists.txt
modules/core/system/include/opengv2/system/: SystemBase.hpp
modules/core/system/src/: SystemBase.cpp
modules/core/tracking/: CMakeLists.txt
modules/core/tracking/include/opengv2/tracking/: TrackingBase.hpp
modules/core/tracking/src/: TrackingBase.cpp
modules/core/utility/: CMakeLists.txt
modules/core/utility/include/opengv2/utility/: utility.hpp
modules/core/viewer/: CMakeLists.txt
modules/core/viewer/include/opengv2/viewer/: PointLandmarkViewer.hpp  ViewerBase.hpp
modules/core/viewer/src/: PointLandmarkViewer.cpp  ViewerBase.cpp
parameter/cvcalib/: 1101-seq01.xml  1101-seq02.xml  1104-fisheye1.xml  1104-fisheye2.xml  1104-hdr.xml  1108-fast1.xml  1108-fast2.xml  1108-fast3.xml  1111-hs1.xml  example.xml
parameter/event_calibration/: event-calibration-1101-seq01.yaml  event-calibration-1101-seq02.yaml  event-calibration-1104-fisheye1.yaml  event-calibration-1104-fisheye2.yaml  event-calibration-1104-hdr.yaml  event-calibration-1108-fast1.yaml  event-calibration-1108-fast2.yaml  event-calibration-1108-fast3.yaml  event-calibration-1111-hs1.yaml  example.yaml
